[#327] fix: 예매 삭제도 활성 예약 확인 로직에서 제외되도록 수정