@@ -5,12 +5,12 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.beat.domain.booking.dao.BookingRepository;
+import com.beat.domain.booking.domain.BookingStatus;
 import com.beat.domain.cast.dao.CastRepository;
 import com.beat.domain.cast.domain.Cast;
 import com.beat.domain.cast.exception.CastErrorCode;
@@ -73,7 +73,9 @@ public class PerformanceModifyService {
 		validateOwnership(userId, performance);
 
 		List<Long> scheduleIds = scheduleRepository.findIdsByPerformanceId(request.performanceId());
-		boolean isBookerExist = bookingRepository.existsByScheduleIdIn(scheduleIds);
+
+		List<BookingStatus> statusesToExclude = List.of(BookingStatus.BOOKING_CANCELLED, BookingStatus.BOOKING_DELETED);
+		boolean isBookerExist = bookingRepository.existsActiveBookingByScheduleIds(scheduleIds, statusesToExclude);
 
 		if (isBookerExist && request.ticketPrice() != performance.getTicketPrice()) {
 			log.error("Ticket price update failed due to existing bookings for performanceId: {}", performance.getId());
@@ -148,7 +150,7 @@ public class PerformanceModifyService {
 
 		List<LocalDateTime> performanceDates = request.scheduleModifyRequests().stream()
 			.map(ScheduleModifyRequest::performanceDate)
-			.collect(Collectors.toList());
+			.toList();
 		performance.updatePerformancePeriod(performanceDates);
 
 		if (!isBookerExist) {
@@ -167,11 +169,11 @@ public class PerformanceModifyService {
 		List<Long> requestScheduleIds = scheduleRequests.stream()
 			.map(ScheduleModifyRequest::scheduleId)
 			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+			.toList();
 
 		List<Long> schedulesToDelete = existingScheduleIds.stream()
 			.filter(id -> !requestScheduleIds.contains(id))
-			.collect(Collectors.toList());
+			.toList();
 
 		deleteRemainingSchedules(schedulesToDelete);
 
@@ -191,7 +193,7 @@ public class PerformanceModifyService {
 
 				return schedule;
 			})
-			.collect(Collectors.toList());
+			.toList();
 
 		performance.assignScheduleNumbers(schedules);
 
@@ -203,7 +205,7 @@ public class PerformanceModifyService {
 				calculateDueDate(schedule.getPerformanceDate()),
 				schedule.getScheduleNumber()
 			))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	private Schedule addSchedule(ScheduleModifyRequest request, Performance performance) {
@@ -409,7 +411,7 @@ public class PerformanceModifyService {
 					return updateStaff(request, performance);
 				}
 			})
-			.collect(Collectors.toList());
+			.toList();
 
 		deleteRemainingStaffs(existingStaffIds);
 
